# hh-bbtautau

./: .gitignore  CMakeLists.txt  README.md  comando.py
Analysis/: BuildFile.xml
Analysis/config/: TT_embedded.cfg  Wjets.cfg  Wjets_old.cfg  analyzers.cfg  background.cfg  data.cfg  dataset.cfg  dyjets.cfg  dyjets_weights.cfg  embedded.cfg  histograms.cfg  histograms_2016.cfg  myFactoryBDT-High_kinvarsAN_noSVfit_train0-44_Grad_3.weights.xml  myFactoryBDT-Medium_kinvarsAN_noSVfit_train0-29_Grad_1.weights.xml  new_sources_Run2.cfg  plot_setup.cfg  postfit_sf.cfg  prefit_unc.cfg  signal.cfg  signal_VBF.cfg  sources.cfg  sources.cfg.orig  sources_Reduced.cfg  sources_Reduced_eTau.cfg  sources_Reduced_muTau.cfg  sources_Run2.cfg  ttbar_weights_eTau.cfg  ttbar_weights_full.cfg  ttbar_weights_muTau.cfg  ttbar_weights_tauTau.cfg  uncertainties.cfg  wjets_weights.cfg  wjets_weights_2017.cfg
Analysis/include/: AnaTuple.h  AnaTuple.h.orig  AnaTupleReader.h  AnalysisCategories.h  AnalysisCategories.h.orig  AnalyzerConfigEntryReader.h  AnalyzerDescriptor.h  AnalyzerSetup.h  BDT_reader_etau.h  BDT_reader_mutau.h  BTagWeight.h  BaseAnalyzer.h  BaseEventAnalyzer.h  BaseEventAnalyzer.h.autosave  BaseEventAnalyzer.h.orig  BaseFlatTreeAnalyzer.h  BaseFlatTreeProducer.h  CombineSampleDescriptor.h  CombineSampleDescriptorConfigEntryReader.h  Config.h  DYModel.h  EventAnalyzerCore.h  EventAnalyzerData.h  EventAnalyzerData.h.orig  EventAnalyzerDataCollection.h  EventAnalyzerDataId.h  EventTags.h  FlatAnalyzerData.h  FlatAnalyzerDataCollection.h  GenParticle.cxx  GenParticle.h  GenStatusFlags.h  KinFit_CMSSW.h  Lester_mt2_bisect.h  LightBaseBigTreeAnalyzer.h  LightBaseEventAnalyzer.h  LightBaseFlatTreeAnalyzer.h  LimitsInputProducer.h  MT2.h  MvaConfigReader.h  (+22 more)
Analysis/python/: randomDiscriminator.py
Analysis/source/: CalcDNN.cxx  CalcMulticlassDNN.cxx  CreatePlots.cxx  CreatePostFitPlots.cxx  DY_estimation.cxx  FlatTreeAnalyzer_mutau.cxx  FlatTreeAnalyzer_tautau.cxx  FlatTreeProducer.cxx  FlatTreeProducer_etau.cxx  FlatTreeProducer_mutau.cxx  FlatTreeProducer_tautau.cxx  KinFitTreeProducer.cxx  LimitConfigurationProducer.cxx  MergeRootFiles.cxx  PileUp.cxx  ProcessAnaTuple.cxx  SyncTreeProducer.cxx  bbeTauAnalyzer.cxx  bbetauAnalyzer.cxx  bbmuMuAnalyzer.cxx  bbmuTauAnalyzer.cxx  bbmumuAnalyzer.cxx  bbmumuAnalyzer.cxx.orig  bbmutauAnalyzer.cxx  bbtauTauAnalyzer.cxx  bbtautauAnalyzer.cxx
Analysis/src/: AnaTuple.cpp  AnaTupleReader.cpp  AnalysisCategories.cpp  BaseEventAnalyzer.cpp  DYModel.cpp  EventAnalyzerCore.cpp  EventAnalyzerData.cpp  EventAnalyzerDataCollection.cpp  EventAnalyzerDataId.cpp  EventTags.cpp  LimitsInputProducer.cpp  MvaConfigReader.cpp  MvaConfiguration.cpp  MvaReader.cpp  MvaVariables.cpp  NonResModel.cpp  SampleDescriptor.cpp  SampleDescriptorConfigEntryReader.cpp  StackedPlotsProducer.cpp  SyncTupleHTT.cpp
Analysis/studies/: AnalyzeBKGShape.C  AnalyzeEMBShape.C  AnalyzeESshape.C  AnalyzeQCDShape.C  AnalyzeQCDshapeSyst.C  AnalyzeZTTshape.C  BjetSelectionStudy.cxx  EventSelectionStudy.cxx  KinFitStudy.cxx  McTruthStudy.cxx  McTruthStudy_flat.cxx
Analysis/test/: AnalyzerConfig_t.cxx  EventCategories_t.cxx  EventCategories_test.cxx
Instruments/: BuildFile.xml  TupleSkimmer.sh
Instruments/config/: DYJets_file.cfg  DYJets_file_2017.cfg  DYJets_file_lxplus.cfg  DYJets_file_noHT.cfg  SM_node_file.cfg  Skimmer.cfg  TTbar_file.cfg  TTbar_file_tmp.cfg  WJets_file.cfg  cross_section.cfg  dyjets_splitting.cfg  dyjets_splitting_2017.cfg  sync.cfg  time_file.cfg  time_output.cfg  ttbar_splitting.cfg  wjets_splitting.cfg  wjets_splitting_noJets.cfg
Instruments/config2016/: WJets_file_noJets.cfg  dyjets_splitting_noHT.cfg
Instruments/config2017/: DYJets_file_noHT.cfg  Skimmer.cfg  TTbar_file.cfg  sync.cfg  ttbar_splitting.cfg
Instruments/include/: DYFileConfigEntryReader.h  DYFileDescriptor.h  FileConfigEntryReader.h  FileDescriptor.h  NJets_HT_BinFileConfigEntryReader.h  NJets_HT_BinFileDescriptor.h  SMFileConfigEntryReader.h  SMFileDescriptor.h  SampleDescriptor.h  SkimmerConfig.h  SkimmerConfigEntryReader.h  TTFileConfigEntryReader.h  TTFileDescriptor.h  TimeFileConfigEntryReader.h  TimeFileDescriptor.h
Instruments/notebook/: MassCutOptimization.ipynb  SignificanceEstimation.ipynb
Instruments/python/: CacheMerger.py  addRegressedP4.py  addSVfitKinfitMT2.py  btag_norm_sf.py  gen_study.py  getDataIdHash.py  r_factor.py  renameBranches.py  skimAnaTuple.py  skimNano.h  skimNano.py  submit_dnn_calc.py
Instruments/scripts/: MergeLimitInputs.py  dataIdCalculator.py  makeYieldTable.py
Instruments/source/: BTagEffEstimator.cxx  BTagEffEstimator_deepCSV.cxx  BTagEfficiency.cxx  CacheMerger.cxx  DYCheckWeight.cxx  DYFileMerger.cxx  ExeTimeAnalyzer.cxx  ExtractBRegression.cxx  FileMerger.cxx  NJets_HT_BinFileMerger.cxx  README.md  SMCheckWeight.cxx  SMFileMerger.cxx  SyncTreeProducer.cxx  TTFileMerger.cxx  TimeAnalyzer_t.cxx  TupleSkimmer.cxx
Instruments/src/: SkimmerConfig.cpp  SkimmerConfigEntryReader.cpp
Instruments/test/: DYWeight_t.cxx  SMWeight_t.cxx  TimeAnalyzer_t.cxx
MVASelections/include/: MVA_common.h  MVA_variables.h  MvaReader.h
MVASelections/source/: MVA_etau.C  MVA_mutau.C  MVA_tautau.C
McCorrections/: BuildFile.xml
McCorrections/data/: DY_LLR_Scale_factors_NbjetsBins.root  DY_Scale_factor_LO_NbjetBins_ptBins_m_tt_vis_mh_2017.root  DY_Scale_factor_LO_NbjetBins_ptBins_mtt_2016_prod_v6.root  DY_Scale_factor_LO_NbjetBins_ptBins_mtt_2017_prod_v6.root  DY_Scale_factor_LO_NbjetBins_ptBins_mtt_2018_prod_v6.root  DY_Scale_factor_LO_NbjetBins_ptBins_pt_H_tt_mh_2016_full_run2v.root  DY_Scale_factor_LO_NbjetBins_ptBins_pt_H_tt_mh_2017_full_run2v.root  DY_Scale_factor_LO_NbjetBins_ptBins_pt_H_tt_mh_2018_full_run2v.root  DY_Scale_factor_LO_NbjetBins_ptBins_pt_H_tt_mtt_2016_full_run2v.root  DY_Scale_factor_LO_NbjetBins_ptBins_pt_H_tt_mtt_2017_full_run2v.root  DY_Scale_factor_LO_NbjetBins_ptBins_pt_H_tt_mtt_2018_full_run2v.root  DY_Scale_factor_LO_loose_pu_NbjetBins_ptBins_m_tt_vis_mh_2017.root  (+58 more)
Run/: install_framework.sh
Studies/: BuildFile.xml
(+260 files in other folders)
